[project]
name = "notion-exporter"
version = "0.1.2"

description = "Tool that allows you to export your Notion pages to markdown files."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
  { name = "Bogdan Kostić", email = "bogdankostic@web.de" },
]
keywords = [
    "Notion",
    "Notion-API",
    "Notion-Export",
    "Notion-Extraction"
]
dependencies = [
    "notion-client",
    "tenacity"
]

[project.urls]
"GitHub" = "https://github.com/bogdankostic/notion-exporter"

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.+)"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/notion_exporter",
  "/VERSION.txt",
]

[tool.hatch.build.targets.wheel]
packages = [
  "notion_exporter",
]

[tool.black]
line-length = 120

[[tool.uv.index]]
name = "Neopallium"
url = "https://pkgs.dev.azure.com/Sagittal/Neopallium/_packaging/Sagittal/pypi/simple/"
publish-url = "https://pkgs.dev.azure.com/Sagittal/Neopallium/_packaging/Sagittal/pypi/upload/"
explicit = true
